--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,43 @@
+:root {
+    --max-width: 1100px;
+    --border-radius: 12px;
+    --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
+      "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
+      "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
+    /* Colors */
+    --color-black: #2B2B2B;
+    --off-white: #F5F5F3;
+  
+    --space-sm: 0.5rem;
+    --space-md: 1rem;
+    --space-lg: 1.5rem;
+  
+    /* Font Sizes */
+    --font-size-sm: 0.5rem;
+    --font-size-md: 1rem;
+    --font-size-lg: 2rem;
+    --font-size-xl: 3rem;
+  }
+
 * {
     box-sizing: border-box;
-    width: auto;
-    height: auto;
+    padding: 0;
+    margin: 0;
 }
 
+html,
 body {
+    max-width: 100vw;
+    overflow-x: hidden;
+}
+
+/* body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
     width: 100%;
     background-color: rgba(238, 237, 237, 0.878);
-}
+} */
 
 body>* {
     flex-grow: 0;
@@ -20,78 +47,6 @@ main {
     margin-bottom: 50px;
 }
 
-.nav-title {
-    font-family: 'Game Played', sans-serif;
-    color: #000000b5;
-    font-size: 50px;
-    padding-left: 20px;
-}
-
-/* Welcome section - start */
-
-.welcome-card {
-    text-align: center;
-    align-items: center;
-    margin: 0 10px 0 10px;
-}
-
-.welcome-options {
-    display: flex;
-    flex-direction: row;
-    justify-content:space-between;
-    align-items: center;
-    margin-left: auto;
-    margin-right: 20px;
-    margin-bottom: 20px;
-}
-
-.welcome-option-group {
-    display: flex;
-    flex-direction: row;
-    justify-content:space-around;
-    align-items: center;
-    background-color: #000000b5;
-    border-radius: 15px;
-    height: 3.6rem;
-
-}
-
-.welcome-option {
-    margin: 0 5px 0 5px;
-    line-height: 1.4rem;
-}
-
-.welcome-option a {
-    background-color: #303030d6;
-    border-radius: 10px;
-    text-decoration: none;
-    font-family: 'Jawbreaker OL1 BRK', sans-serif;
-    padding: 0 26px 0 2px;
-    text-align: center;
-    font-size: 30px;
-    cursor: pointer;
-    color: #d2cfcf;
-    padding: 0 10px;
-    line-height: 1.4em;
-}
-
-.welcome-option a:hover {
-    transform: scale(1.1);
-    color: #000000b5;
-    font-family: 'Jawbreaker OL1 BRK', sans-serif;
-    background-color: #d2cfcf;
-}
-
-.welcome-option a.active {
-    transform: scale(1.1);
-    color: #000000b5;
-    font-family: 'Jawbreaker OL1 BRK', sans-serif;
-    background-color: #d2cfcf;
-}
-
-/* Welcome Section - end */
-
-/* Content Card - start */
 .content-card {
     justify-content: center;
     text-align: center;
@@ -108,142 +63,6 @@ main {
     font-family: 'Matias', sans-serif;
 }
 
-/* Content Card - end */
-
-/* Body styling, home - start */
-
-.content-home {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 100px 100px;
-    gap: 10px;
-    margin-top: 100px;
-    margin-bottom: 250px;
-
-}
-
-.box-1 {
-    grid-column: 2 / 4;
-    grid-row: 1;
-}
-
-.box-1 h1{
-    text-align: left;
-    padding: 0 200px 0 200px;
-}
-
-.box-2 {
-    grid-column: 1 /3;
-    grid-row: 1 / 3;
-}
-
-.box-3 {
-    grid-row: 2;
-    grid-column: 2 / 4;
-}
-
-.box-3 p {
-    padding: 0 50px 0 50px;
-    text-align: justify;
-    font-size: 1.5rem;
-    margin-left: 150px;
-}
-
-.content-home img {
-    width: 350px;
-    height: 360px;
-    border-radius: 50%;
-    border: 5px solid #000000b5;
-}
-
-.content-home-mobile{
-    display: none;
-}
-/* Body styling, home - end  */
-
-/* Body styling, about - start */
-.content-body-about {
-    color: #000000b5;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-.content-body-about p{
-    text-align: justify;
-    padding-left: 100px;
-    padding-right: 100px;
-    font-size: 1.5rem;
-}
-
-.content-about {
-    color: #000000b5;
-}
-
-.content-skills h1 {
-    text-align: center;
-    padding: 0 20px 0 20px 0;
-}
-
-.content-body-portfolio {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-.content-portfolio{
-    margin-top: 20px;
-}
-
-.content-project{
-    column-count: 2;
-    column-width: 200px;
-    margin-bottom: 50px;
-    font-family: 'Matias', sans-serif;
-}
-
-.content-project a{
-    text-decoration: none;
-    background-color: #000000b5;
-    color: white;
-    border-radius: 10%;
-}
-
-.content-project img{
-    width: 550px;
-    height: 400px;
-    border-radius: 10%;
-    background: radial-gradient(transparent 20%, white 70%);
-}
-
-.content-project-description p{
-    padding: 0 40px 0 40px;
-    font-size: 1.3rem;
-    text-align: justify;
-}
-
-.content-project-picture{
-    filter: drop-shadow(0 0 0.75rem rgb(0, 0, 0));
-}
-
-.content-contact{
-    padding: 20px 100px 10px 100px;
-    text-align: center;
-    font-size: 1.5rem;
-}
-.content-contact h1{
-    text-align: center;
-}
-.content-body-contact a{
-    font-size: 60px;
-    text-align: center;
-}
-
-/* Body styling, about - end */
-
-/*  Footer - start */
 footer {
     position: fixed;
     bottom: 0;
@@ -254,106 +73,8 @@ footer {
 
 /* Footer - end */
 
-@media only screen and (min-width: 805px) {
-    .content-body-portfolio-mobile{
-        display: none;
-    }
-}
-
 @media only screen and (max-width: 768px) {
-    .nav-title{
-        font-size: 1rem;
-    }
-
-    .welcome-option-group {
-        height: 1.5rem;
-    }
-    
-    .welcome-option a {
-        font-size: 0.7rem;
-    }
-
     .content-card {
         display: inline-block;
     }
-
-    .content-home{
-        display: none;
-    }
-
-    .content-home-mobile{
-        display: block;
-        justify-content: center;
-        text-align: center;
-    }
-
-    .box-1-mobile{
-        font-size: 0.8rem;
-    }
-    .box-3-mobile p{
-        padding: 0 100px 0 100px;
-    }
-
-    .content-home-mobile img {
-        width: 250px;
-        height: 260px;
-        border-radius: 50%;
-        border: 5px solid rgb(0, 0, 0);
-    }
-
-    .content-body-about p{
-        padding: 0 50px 0 50px;
-        font-size: 1.2rem;
-    }
-    .content-body-about h1{
-        font-size: 1.2rem;
-    }
-
-    .content-body-portfolio{
-        display: none;
-    }
-    
-    .content-body-portfolio-mobile h1{
-        font-size: 1rem;
-    }
-
-    .content-project-mobile{
-        column-count: 1;
-        column-width: 200px;
-        margin: 50px 0 50px 0;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        font-family: 'Matias', sans-serif;
-    }
-    .content-project-mobile h2 a{
-        text-decoration: none;
-        background-color: #000000b5;
-        color: white;
-        border-radius: 10%;
-    }
-
-    .content-project-mobile img{
-        width: 400px;
-        height: 250px;
-        border-radius: 10%;
-        background: radial-gradient(transparent 20%, white 70%);
-    }
-
-    .content-project-description-mobile p{
-        text-align: justify;
-        padding: 0 40px 0 40px;
-    }
-
-    .content-project-picture-mobile{
-        filter: drop-shadow(0 0 0.75rem rgb(0, 0, 0));
-    }
-
-    .content-contact{
-        padding: 20px 100px 10px 100px;
-        text-align: center;
-        font-size: 1rem;
-    }
-
-    
 }
