--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,12 @@
 :root {
     --max-width: 1100px;
     --border-radius: 12px;
-    --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-      "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-      "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
+
     /* Colors */
     --color-black: #2B2B2B;
     --off-white: #F5F5F3;
-  
+    
+    /* Spacing */
     --space-sm: 0.5rem;
     --space-md: 1rem;
     --space-lg: 1.5rem;
@@ -30,14 +29,6 @@ body {
     max-width: 100vw;
     overflow-x: hidden;
 }
-
-/* body {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    width: 100%;
-    background-color: rgba(238, 237, 237, 0.878);
-} */
 
 body>* {
     flex-grow: 0;
