--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 
     /* Colors */
     --color-black: #2B2B2B;
+    --color-dark-black:#262525; 
     --off-white: #F5F5F3;
     
     /* Spacing */
@@ -49,7 +50,10 @@ main {
 
 .content-card h1 {
     text-align: center;
-    font-family: 'Chalk Brush Personal Use', sans-serif;
+    /* font-family: 'Chalk Brush Personal Use', sans-serif; */
+    font-family: 'Game Played', sans-serif;
+    color: var(--color-dark-black);
+    font-size: 60px;
 }
 
 .content-card p {
@@ -69,5 +73,9 @@ footer {
 @media only screen and (max-width: 768px) {
     .content-card {
         display: inline-block;
+    }
+
+    .content-card h1 {
+        font-size: 2rem;
     }
 }
