Update background color

--- a/src/components/about.css
+++ b/src/components/about.css
@@ -1,5 +1,5 @@
 .content-body-about {
-    color: #000000b5;
+    color: var(--color-dark-black);
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -14,7 +14,7 @@
 }
 
 .content-about {
-    color: #000000b5;
+    color: var(--color-dark-black);
 }
 
 .content-skills h1 {
