--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+/* index.css */
 :root {
     --max-width: 1100px;
     --border-radius: 12px;
@@ -43,7 +44,7 @@ main {
     justify-content: center;
     text-align: center;
     align-items: center;
-    color: #000000b5;
+    color: var(--color-dark-black);
     margin-top: 50px;
     margin-bottom: 50px;
 }
@@ -59,6 +60,53 @@ main {
 .content-card p {
     font-family: 'Matias', sans-serif;
 }
+
+.root-container {
+    width: 100%;
+    height: 100%;
+    min-height:100vh;
+    overflow-y: hidden;
+    --s: 84px;
+    --c1: #f2f2f2;
+    --c2: #cdcbcc;
+    --c3: #999999;
+  
+    --_g: 0 120deg, #0000 0;
+    background: conic-gradient(
+        from 0deg at calc(500% / 6) calc(100% / 3),
+        var(--c3) var(--_g)
+      ),
+      conic-gradient(
+        from -120deg at calc(100% / 6) calc(100% / 3),
+        var(--c2) var(--_g)
+      ),
+      conic-gradient(
+        from 120deg at calc(100% / 3) calc(500% / 6),
+        var(--c1) var(--_g)
+      ),
+      conic-gradient(
+        from 120deg at calc(200% / 3) calc(500% / 6),
+        var(--c1) var(--_g)
+      ),
+      conic-gradient(
+        from -180deg at calc(100% / 3) 50%,
+        var(--c2) 60deg,
+        var(--c1) var(--_g)
+      ),
+      conic-gradient(
+        from 60deg at calc(200% / 3) 50%,
+        var(--c1) 60deg,
+        var(--c3) var(--_g)
+      ),
+      conic-gradient(
+        from -60deg at 50% calc(100% / 3),
+        var(--c1) 120deg,
+        var(--c2) 0 240deg,
+        var(--c3) 0
+      );
+    background-size: calc(var(--s) * 1.732) var(--s);
+  }
+  
 
 footer {
     position: fixed;
